# ERNIE-Dog

./: .gitignore  README.md  demo.py  demo_nano1.sh  demo_nano2.py  demo_nano3_nx.py  requirements-nano2.txt  requirements.txt
ERNIE_Bot/: Bot.py
Go1_Bot/: Dog.py  SoundClient.py  SoundServer.py  Sport.py  build_camera_sdk.sh  build_face_sdk.sh  build_legged_sdk.sh  build_light_sdk.sh
Go1_Bot/CameraSDK/: .gitignore  CMakeLists.txt  ERNIE_Dog_nano1.cpp
Go1_Bot/FaceLightSDK/: CMakeLists.txt  main.cpp
doc/: chapter1.1.md  chapter1.2.md  chapter2.3.md  chapter3.1.md  chapter3.2.md  chapter3.3.md
